# pamo

./: .gitmodules  AGENTS.md  BUILDING_LTE.md  algo.md  benchmark.md  example.py  run-web-demo.sh  setup_uv.sh  setup_uv_cuda12.sh
pamo_c/: .gitignore  CMakeLists.txt  LICENSE  tasks.md
pamo_c/cmake/: PamoCompilerFlags.cmake
pamo_c/example/: CMakeLists.txt  main.c
pamo_c/include/pamo/: pamo.h  pamo_alloc.h  pamo_bvh.h  pamo_internal.h  pamo_lightrt.h  pamo_mesh.h  pamo_progress.h  pamo_stage1.h  pamo_stage2.h  pamo_stage3.h  pamo_types.h
pamo_c/src/: CMakeLists.txt  alloc.c  progress.c  sort.c  tri_tri_intersect.c
pamo_c/src/bvh/: bvh_build.c  lightrt_bridge.cpp
pamo_c/src/mesh/: adjacency.c  compact.c  geometry.c  mesh.c  topology.c
pamo_c/src/stage1/: dual_mc.c  remesh.c  sdf.c
pamo_c/src/stage2/: collapse.c  postprocess.c  simplify.c
pamo_c/src/stage3/: ccd.c  cg_solver.c  line_search.c  safe_project.c  spd_project.c
pamo_c/src/stage3/energies/: collision.c  distance.c  elastic.c  hinge.c
pamo_c/tests/: CMakeLists.txt  test_alloc.c  test_bvh.c  test_mesh.c  test_tri_tri.c
pamo_c/verify/: CMakeLists.txt  export_reference.py  verify_compare.py  verify_main.c
pamo_c/web/: .gitignore  README.md  binding.cc  bootstrap-linux.sh  embind-utils.hpp
pamo_c/web/cli/: compare.mjs  package.json
pamo_c/web/demo/: index.html
pamo_c/web/js/: PamoLoader.js
pamo_c/web/server/: server.py
pamo_c/web/shared/: colormap.mjs  kdtree.mjs  obj.mjs  pamo_runner.mjs  pamo_worker.mjs
pamo_c/web/wasm/: build.sh  pamo_wasm.c
pamo_c/web/web/: app.mjs  index.html  styles.css
simp_cuda/: setup.py
simp_cuda/pamo/: __init__.py
simp_cuda/safe_project/src/pamo_safe_project/: __init__.py  utils.py
simp_cuda/safe_project/src/pamo_safe_project/kernels/: spd_project.py  utils_kernels.py
simp_cuda/safe_project/src/pamo_safe_project/kernels/distance_kernels/: grad_funcs.py  grad_funcs_struct.py
simp_cuda/safe_project/src/pamo_safe_project/kernels/energy_kernels/: collision_energy.py
